--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/src/styles/global.css" />
     </head>
     <body>
-        <div id="app" class="h-full w-full" />
+        <div id="app" />
         <script type="module" src="/src/renderer.ts"></script>
     </body>
 </html>
